<resources>
    <string name="app_name">Doughnuts</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repassword">Repeat password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="developer_info">We at Frostox, are famished!</string>
    <string name="title_activity_splash">Doughnuts</string>
    <string name="login">Login into Doughnuts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_main">Doughnuts</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!-- Error Messages -->
    <string name="error_contingency">Someone spoiled the recipe! Please wait while we behead them.</string>
    <string name="error_session">I misplaced your name, friend. Log in again!</string>

    <string name="email_missing">You thought you could login without an email?</string>
    <string name="email_invalid">That looks like a fake email to me!</string>
    <string name="password_length">Passwords can\'t be shorter than your ****. At least 5 chars dude!</string>

    <string name="invalid_user_credentials">I don\'t know you yet! Sign Up now!</string>

    <!--- Web Services Related Strings -->
    <string name="base_url">http://192.168.0.106:3000/api/</string>

    <string name="client_id">efOeHY5Ovf</string>
    <string name="client_secret">r18sAsEsxR</string>
    <string name="grant_password">password</string>
    <string name="grant_refresh">refresh_token</string>
    <string name="grant_access">access_token</string>

    <!--- Web Service Error Descs -->
    <string name="invalid_credentials">Invalid resource owner credentials</string>
</resources>
