<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.frostox.doughnuts.fragments.Login"
    android:paddingTop="?android:attr/actionBarSize">

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:layout_below="@+id/app_label"
            android:layout_marginTop="30dp">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusRight="@id/text1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:id="@+id/text2">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="      Log In      "
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_below="@+id/text2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:text="Forgot Password"
            android:textColor="@color/white"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/donut"
            android:layout_alignParentTop="true"/>


        <TextView
            android:id="@+id/app_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/app_logo"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            style="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="Create a new account"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/waito"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:progress="30"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/progressBar"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:text="Ahem.. A moment please.."/>

    </RelativeLayout>

</FrameLayout>
